docs: done some formatting, fixed links, and change video as per new code

--- a/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
@@ -42,24 +42,24 @@ The Smart SEO extension code can be found in our [webiny-examples](https://githu
 
 ## Set OpenAI API Key in Environment Variables
 
-Open the `.env` file in the root of your project and add the OpenAI API key to the `REACT_APP_OPEN_AI_API_KEY` environment variable as shown below:
+Open the `.env` file in the root of your project and add the OpenAI API key to the `WEBINY_ADMIN_OPEN_AI_API_KEY` environment variable as shown below:
 
 ```bash
-REACT_APP_OPEN_AI_API_KEY=sk-proj-T2-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+WEBINY_ADMIN_OPEN_AI_API_KEY=sk-proj-T2-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ```
 
 For detailed instructions on creating an OpenAI API key, refer to their [official documentation](https://platform.openai.com/docs/quickstart#create-and-export-an-api-key).
 
 ## Run the Project
 
-After downloading the extension to your project, run the [Webiny watch](/docs/core-development-concepts/basics/watch-command) command to see the Smart SEO functionality in action.
+After downloading the extension to your project, run the [webiny watch](/docs/core-development-concepts/basics/watch-command) command to see the Smart SEO functionality in action.
 
 ```bash
 yarn webiny watch admin --env ENVIRONMENT_NAME
 ```
 
 ## All Set!
-You’re now ready to generate SEO titles and tags for your articles using OpenAI. Simply navigate to the `Article - Smart SEO` Model, create a new article, and click the “AI-Optimized SEO” button to generate SEO titles and tags effortlessly.
+You’re now ready to generate SEO titles and tags for your articles using OpenAI. Simply navigate to the **Article - Smart SEO** Model, create a new article, and click the “AI-Optimized SEO” button to generate SEO titles and tags effortlessly.
 
 <Video src={smartSEO} controls={true} />
 
@@ -68,34 +68,34 @@ You’re now ready to generate SEO titles and tags for your articles using OpenA
 Let’s walk through the code to understand how the Smart SEO extension operates. We’ve created a new [extension](/docs/core-development-concepts/basics/extensions) called `smart-seo-open-ai`, and we’ll review each plugin used in this extension one by one.
 
 ### Field Tracker, ContentEntry Form Decorator
-In this example, we have an `Article - Smart SEO` Model with four fields: `Content`, `SEO - Title`, `SEO - Description`, and `SEO - Meta Tags`. We will track these fields. Once the Content field is populated, we will send it to OpenAI, which will generate SEO-friendly titles and tags for the article. The generated title and tags will then be set in the respective `Title`, `Description` and `Tags` fields of the model.
+In this example, we have an **Article - Smart SEO** Model with four fields: **Content**, **SEO - Title**, **SEO - Description**, and **SEO - Meta Tags**. We will track these fields. Once the Content field is populated, we will send it to OpenAI, which will generate SEO-friendly titles and tags for the article. The generated title and tags will then be set in the respective **Title**, **Description** and **Tags** fields of the model.
 
-The concept is straightforward: we aim to track fields of interest, such as text inputs or rich text fields. The challenge lies in not knowing the exact location of these fields. They could be nested within objects, repeatable objects, or dynamic zone templates, making their placement unpredictable. Hardcoding paths to these fields is not a feasible solution. So, we will create the [Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/FieldTracker.tsx).
+The concept is straightforward: we aim to track fields of interest, such as text inputs or rich text fields. The challenge lies in not knowing the exact location of these fields. They could be nested within objects, repeatable objects, or dynamic zone templates, making their placement unpredictable. Hardcoding paths to these fields is not a feasible solution. So, we will create the [Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/FieldTracker.tsx).
 
-[Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/FieldTracker.tsx) is a React context that tracks content model fields of interest. It enables you to extract data from these fields that can be send to OpenAI and update the fields with the response received.
+[Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/FieldTracker.tsx) is a React context that tracks content model fields of interest. It enables you to extract data from these fields that can be send to OpenAI and update the fields with the response received.
 
-Here is the [code for the Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/FieldTracker.tsx), here we [decorated the ContentEntryForm](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryForm.tsx) with a FieldTracker component.
+Here is the [code for the Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/FieldTracker.tsx), here we [decorated the `ContentEntryForm`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/DecorateContentEntryForm.tsx) with a FieldTracker component.
 
-We’ve also [decorated the useBind hook](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryFormBind.tsx) to integrate field tracking specifically for models. In this example, we are tracking rich-text fields and SEO-specific fields (`seoTitle`, `seoDescription`, `seoMetaTags`) in the `Article - Smart SEO` model. This allows us to trigger dynamic updates and facilitate interactions with external services.
+We’ve also [decorated the `useBind` hook](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/DecorateContentEntryFormBind.tsx) to integrate field tracking specifically for models. In this example, we are tracking rich-text fields and SEO-specific fields (**seoTitle**, **seoDescription**, **seoMetaTags**) in the **Article - Smart SEO** model. This allows us to trigger dynamic updates and facilitate interactions with external services.
 
 <Alert type="info">
 
-  You can customize [this ContentEntryFormBind decorator file](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryFormBind.tsx) to track fields from other models or different field types, tailoring it to your specific use case.
+  You can customize [this `ContentEntryFormBind` decorator file](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/DecorateContentEntryFormBind.tsx) to track fields from other models or different field types, tailoring it to your specific use case.
 
 </Alert>
 
 ### Extract HTML from RichTextHtml (Lexical Editor)
-Webiny leverages the [Lexical text editor](https://lexical.dev/) for Rich Text Fields. However, for generating SEO-related information using OpenAI, we will send the HTML content (not the Lexical format). To achieve this, we need to extract the HTML content from the Rich Text field. For this purpose, we have created a [extractFromRichText transformer](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/extractFromRichText.ts) to handle the conversion.
+Webiny leverages the [Lexical text editor](https://lexical.dev/) for Rich Text Fields. However, for generating SEO-related information using OpenAI, we will send the HTML content (not the Lexical format). To achieve this, we need to extract the HTML content from the Rich Text field. For this purpose, we have created a [`extractFromRichText` transformer](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/extractFromRichText.ts) to handle the conversion.
 
 ### Smart SEO
-This is the [primary plugin (SmartSeo.tsx)](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/SmartSeo.tsx) that integrates Webiny with OpenAI. It sends the HTML content to OpenAI and retrieves SEO-related information. The received data is then used to update the corresponding fields in the model.
+This is the [primary plugin (`SmartSeo.tsx`)](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx  ) that integrates Webiny with OpenAI. It sends the HTML content to OpenAI and retrieves SEO-related information. The received data is then used to update the corresponding fields in the model.
 
-If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it has been configured in this plugin using the [ContentEntryEditorConfig](https://github.com/webiny/webiny-examples/blob/63c125f10a1dfc3097e2d9da2c5b0d8c903c15ae/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/SmartSeo.tsx#L117).
+If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it has been configured in this plugin using the [ContentEntryEditorConfig](https://github.com/webiny/webiny-examples/blob/59f44c564e83e9c453819882209e8946b5069b79/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx#L117).
 
 <Alert type="info">
 
-  We display the `AI-OPTIMIZED SEO` button on the Content Entry form for the content model with the ID `article`.
-  You can easily customize it to include your [content model IDs](https://github.com/webiny/webiny-examples/blob/63c125f10a1dfc3097e2d9da2c5b0d8c903c15ae/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/SmartSeo.tsx#L117) to display this button on the respective content model entry forms.
+  We display the **AI-OPTIMIZED SEO** button on the Content Entry form for the content model with the ID `article`.
+  You can easily customize it to include your [content model IDs](https://github.com/webiny/webiny-examples/blob/59f44c564e83e9c453819882209e8946b5069b79/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx#L123) to display this button on the respective content model entry forms.
 
 </Alert>
 
@@ -103,23 +103,23 @@ If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it ha
 
 ### Article Content Model
 
-In this example, we created an `Article - Smart SEO` Content Model with the ID `article-smart-seo` to showcase AI capabilities.This content model is generated programmatically, and you can find the corresponding [Content Model code here](https://github.com/webiny/webiny-examples/blob/master/headless-cms/test-plugins-ai/5.41.x/extensions/testPluginsAi/api/src/Article.ts).
+In this example, we created an **Article - Smart SEO** Content Model with the ID **article-smart-seo** to showcase AI capabilities.This content model is generated programmatically, and you can find the corresponding [Content Model code here](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api/src/Article.ts).
 
 <Alert type="info">
 
-  Please note that the `article-smart-seo` content ID is referenced in the code. Refer to the sections above for guidance on customizing the code to align with your content model.
+  Please note that the **article-smart-seo** content ID is referenced in the code. Refer to the sections above for guidance on customizing the code to align with your content model.
 
-  In your real project, you can remove this content model by either [deleting the corresponding api directory](https://github.com/webiny/webiny-examples/tree/master/headless-cms/test-plugins-ai/5.41.x/extensions/testPluginsAi/api) or commenting out the [Article import in the index file](https://github.com/webiny/webiny-examples/blob/501128af39b463fd1645ac08e939ceed00f18a17/headless-cms/test-plugins-ai/5.41.x/extensions/testPluginsAi/api/src/index.ts#L4).
+  In your real project, you can remove this content model by either [deleting the corresponding api directory](https://github.com/webiny/webiny-examples/tree/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api) or commenting out the [Article import in the index file](https://github.com/webiny/webiny-examples/blob/59f44c564e83e9c453819882209e8946b5069b79/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api/src/index.ts#L4).
 
 </Alert>
 
-For your reference, we created an `Article - Smart SEO` content model with the following fields to manage and store articles:
+For your reference, we created an **Article - Smart SEO** content model with the following fields to manage and store articles:
 
 | Field             | Field Type | Field ID |
 | :----------       | :--------- | :--------- |
 | Content           | Rich Text  | content |
 | SEO - Title       | Long text  | seoTitle |
 | SEO - Description | Long text  | seoDescription |
-| SEO - Meta Tags   | Object (with `Tag Name` and `Tag Value` Text Field)  | seoMetaTags |
+| SEO - Meta Tags   | Object (with **Tag Name** and **Tag Value** Text Field)  | seoMetaTags |
 
 ![Article](./assets/smart-seo-open-ai/article-model.png)
