feat: add env utils article

--- a/docs/developer-docs/5.41.x/admin-area/extending/environment-utilities.mdx
+++ b/docs/developer-docs/5.41.x/admin-area/extending/environment-utilities.mdx
@@ -7,20 +7,23 @@ description: Learn about environment-related utility functions available within 
 import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 
 <WhatYouWillLearn>
-  
-  - what are the environment-related utility functions available within the Admin application
-  
+  - what are environment-related utility functions
+  - what environment-related utility functions are available
 </WhatYouWillLearn>
 
 ## Overview
 
-This article covers a couple of environment-related utility functions that can be used within the Admin application. When developing custom plugins, these functions can be used to retrieve various information about the current environment.
+This article covers a couple of environment-related utility functions that can be used within the Admin application, or, in other words, when developing extensions for the Admin application.
 
 <Alert>
 
-  For versions 5.41.3 or older, instead of the `@webiny/app-admin` package, please use the `@webiny/app` package.
+  To learn more about extensions in general, please visit the [Extensions](/docs/{version}/core-development-concepts/basics/extensions) article.
 
 </Alert>
+
+Some of the functions include getting the URL of Webiny's backend API, GraphQL API, or, the current tenant (if using a multi-tenant setup). 
+
+The following is a list of available utility functions:
 
 ```tsx
 import {
@@ -50,3 +53,9 @@ getTenantId(); // root
 // Returns `true` if the application is run on localhost.
 isLocalhost(); // true
 ```
+
+<Alert>
+
+  For versions 5.41.3 or older, instead of the `@webiny/app-admin` package, please use the `@webiny/app` package.
+
+</Alert>
