feat: add env utils article

--- a/docs/developer-docs/5.40.x/admin-area/extending/customize-navigation.mdx
+++ b/docs/developer-docs/5.40.x/admin-area/extending/customize-navigation.mdx
@@ -100,3 +100,7 @@ export const Extension = () => {
   );
 };
 ```
+
+## Additional Examples
+
+- [Hiding Navigation Menu Items](https://github.com/webiny/webiny-examples/tree/master/hide-tenant-manager-menu-item)
