--- a/docs/developer-docs/5.41.x/page-builder/extending/create-a-page-element.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/create-a-page-element.mdx
@@ -79,8 +79,8 @@ As previously mentioned, in order to create a custom page element, we start off 
 import React from "react";
 import { request } from "graphql-request";
 import { 
-  createRenderer, 
-  useRenderer, 
+  createRenderer,
+  useRenderer,
   useLoader 
 } from "@webiny/app-page-builder-elements";
 
@@ -89,89 +89,91 @@ const GQL_API_URL = "https://spacex-production.up.railway.app/";
 
 // These are the necessary GraphQL queries we'll need in order to retrieve data.
 const QUERIES = {
-  rockets: /* GraphQL */ `
-    query listRockets($limit: Int, $offset: Int) {
-      data: rockets(limit: $limit, offset: $offset) {
-        id
-        name
-        description
-        wikipedia
-      }
-    }
-  `,
-  dragons: /* GraphQL */ `
-    query listDragons($limit: Int, $offset: Int) {
-      data: dragons(limit: $limit, offset: $offset) {
-        id
-        name
-        description
-        wikipedia
-      }
-    }
-  `
+    rockets: /* GraphQL */ `
+        query listRockets($limit: Int, $offset: Int) {
+            data: rockets(limit: $limit, offset: $offset) {
+                id
+                name
+                description
+                wikipedia
+            }
+        }
+    `,
+    dragons: /* GraphQL */ `
+        query listDragons($limit: Int, $offset: Int) {
+            data: dragons(limit: $limit, offset: $offset) {
+                id
+                name
+                description
+                wikipedia
+            }
+        }
+    `
 };
 
 export interface Spacecraft {
-  id: string;
-  name: string;
-  description: string;
-  wikipedia: string;
+    id: string;
+    name: string;
+    description: string;
+    wikipedia: string;
 }
 
 // It's often useful to type the data that the page element will carry.
 export interface SpaceXElementData {
-  variables: {
-    limit: string;
-    offset: string;
-    type: "rockets" | "dragons";
-  };
+    variables: {
+        limit: string;
+        offset: string;
+        type: "rockets" | "dragons";
+    };
 }
 
 // The renderer React component.
 export const SpaceX = createRenderer(() => {
-  // Let's retrieve the variables that were chosen by
-  // the user upon dropping the page element onto the page.
-  const { getElement } = useRenderer();
-  const element = getElement<SpaceXElementData>();
-  const { limit, offset, type } = element.data.variables;
+    // Let's retrieve the variables that were chosen by
+    // the user upon dropping the page element onto the page.
+    const { getElement } = useRenderer();
+    const element = getElement<SpaceXElementData>();
+    const { limit, offset, type } = element.data.variables;
 
-  // This is where we fetch the data.
-  // Note the `useLoader` React hook. With it, we're ensuring that the
-  // page element is rendered efficiently within a published page.
-  const { data, loading } = useLoader<Spacecraft[]>(() => {
-    return request(GQL_API_URL, QUERIES[type], {
-      limit: parseInt(limit),
-      offset: parseInt(offset)
-    }).then(res => res.data);
-  });
+    // This is where we fetch the data and store it into component's state.
+    const { data, loading } = useLoader<Spacecraft[]>(
+        () => {
+            return request(GQL_API_URL, QUERIES[type], {
+                limit: parseInt(limit),
+                offset: parseInt(offset)
+            }).then(res => res.data);
+        },
+        { cacheKey: [limit, offset, type] }
+    );
 
-  if (loading) {
-    return <>Loading...</>;
-  }
+    if (loading) {
+        return <>Loading...</>;
+    }
 
-  if (!data?.length) {
-    return <>Nothing to show.</>;
-  }
+    if (!data?.length) {
+        return <>Nothing to show.</>;
+    }
 
-  // If the data has been retrieved, we render it via a simple unordered list.
-  return (
-    <ul>
-      {data.map(item => (
-        <li key={item.id}>
-          <h1>{item.name}</h1>
-          <div>{item.description}</div>
-          <br />
-          <div>
-            More info at&nbsp;
-            <a href={item.wikipedia} target={"_blank"} rel={"noreferrer"}>
-              {item.wikipedia}
-            </a>
-          </div>
-        </li>
-      ))}
-    </ul>
-  );
+    // If the data has been retrieved, we render it via a simple unordered list.
+    return (
+        <ul>
+            {data.map(item => (
+                <li key={item.id}>
+                    <h1>{item.name}</h1>
+                    <div>{item.description}</div>
+                    <br />
+                    <div>
+                        More info at&nbsp;
+                        <a href={item.wikipedia} target={"_blank"} rel={"noreferrer"}>
+                            {item.wikipedia}
+                        </a>
+                    </div>
+                </li>
+            ))}
+        </ul>
+    );
 });
+
 ```
 
 As we can see in the code, in order to be able to issue remote GraphQL queries, we're using the [`graphql-request`](https://www.npmjs.com/package/graphql-request) library, which we've specified as our extension's dependency upon running the [`webiny extension`](/docs/core-development-concepts/basics/webiny-cli#yarn-webiny-extension) command in the [Getting Started](#getting-started) section. 
@@ -205,68 +207,64 @@ The following code snippet shows the contents of the [`extensions/spaceXElement/
 ```tsx extensions/spaceXElement/src/admin.tsx
 import React from "react";
 import {
-  PbEditorPageElementAdvancedSettingsPlugin,
-  PbEditorPageElementPlugin,
-  PbRenderElementPlugin
+    PbEditorPageElementAdvancedSettingsPlugin,
+    PbEditorPageElementPlugin,
+    PbRenderElementPlugin
 } from "@webiny/app-page-builder";
 import { SpaceX, SpaceXElementData } from "./SpaceX";
 import { OnCreateActions } from "@webiny/app-page-builder/types";
-import { Element } from "@webiny/app-page-builder-elements/types";
 import { AdvancedSettings } from "./admin/AdvancedSettings";
 
 const INITIAL_ELEMENT_DATA: SpaceXElementData = {
-  variables: { type: "rockets", limit: "10", offset: "0" }
+    variables: { type: "rockets", limit: "10", offset: "0" }
 };
 
 export const Extension = () => (
-  <>
-    <PbRenderElementPlugin elementType={"spaceX"} render={SpaceX} />
-    <PbEditorPageElementPlugin
-      elementType={"spaceX"}
-      render={({ element }) => <SpaceX element={element as Element} />}
-      toolbar={{
-        // We use `pb-editor-element-group-media` to put our new
-        // page element into the Media group in the left sidebar.
-        title: "SpaceX",
-        group: "pb-editor-element-group-media",
-        preview() {
-          // We can return any JSX / React code here. To keep it
-          // simple, we are simply returning the element's name.
-          return <>Space X Page Element</>;
-        }
-      }}
-      // Defines which types of element settings are available to the user.
-      settings={[
-        "pb-editor-page-element-settings-delete",
-        "pb-editor-page-element-settings-visibility",
-        "pb-editor-page-element-style-settings-padding",
-        "pb-editor-page-element-style-settings-margin",
-        "pb-editor-page-element-style-settings-width",
-        "pb-editor-page-element-style-settings-height",
-        "pb-editor-page-element-style-settings-background"
-      ]}
-      // Defines onto which existing elements our element can be dropped.
-      // In most cases, using `["cell", "block"]` will suffice.
-      target={["cell", "block"]}
-      onCreate={OnCreateActions.OPEN_SETTINGS}
-      // `create` function creates the initial data for the page element.
-      create={options => {
-        return {
-          type: "spaceX",
-          elements: [],
-          data: INITIAL_ELEMENT_DATA,
-          ...options
-        };
-      }}
-    />
-    <PbEditorPageElementAdvancedSettingsPlugin
-      elementType={"spaceX"}
-
-      // To make the code a bit cleaner, we've moved the page element
-      // settings into a separate `AdvancedSettings` React component.
-      element={<AdvancedSettings />}
-    />
-  </>
+    <>
+        <PbRenderElementPlugin elementType={"spaceX"} renderer={SpaceX} />
+        <PbEditorPageElementPlugin
+            elementType={"spaceX"}
+            renderer={SpaceX}
+            toolbar={{
+                // We use `pb-editor-element-group-media` to put our new
+                // page element into the Media group in the left sidebar.
+                title: "SpaceX",
+                group: "pb-editor-element-group-media",
+                preview() {
+                    // We can return any JSX / React code here. To keep it
+                    // simple, we are simply returning the element's name.
+                    return <>Space X Page Element</>;
+                }
+            }}
+            // Defines which types of element settings are available to the user.
+            settings={[
+                "pb-editor-page-element-settings-delete",
+                "pb-editor-page-element-settings-visibility",
+                "pb-editor-page-element-style-settings-padding",
+                "pb-editor-page-element-style-settings-margin",
+                "pb-editor-page-element-style-settings-width",
+                "pb-editor-page-element-style-settings-height",
+                "pb-editor-page-element-style-settings-background"
+            ]}
+            // Defines onto which existing elements our element can be dropped.
+            // In most cases, using `["cell", "block"]` will suffice.
+            target={["cell", "block"]}
+            onCreate={OnCreateActions.OPEN_SETTINGS}
+            // `create` function creates the initial data for the page element.
+            create={options => {
+                return {
+                    type: "spaceX",
+                    elements: [],
+                    data: INITIAL_ELEMENT_DATA,
+                    ...options
+                };
+            }}
+        />
+        <PbEditorPageElementAdvancedSettingsPlugin
+            elementType={"spaceX"}
+            element={<AdvancedSettings />}
+        />
+    </>
 );
 ```
 
@@ -283,7 +281,7 @@ import React from "react";
 import { PbRenderElementPlugin } from "@webiny/app-website";
 import { SpaceX } from "./SpaceX";
 
-export const Extension = () => <PbRenderElementPlugin elementType={"spaceX"} render={SpaceX} />;
+export const Extension = () => <PbRenderElementPlugin elementType={"spaceX"} renderer={SpaceX} />;
 ```
 
 And that's all there is to it. With this code in place, we can now jump into our browser and see the results.
