feat: add env utils article

--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -61,11 +61,8 @@ import { createRenderer, useLoader } from "@webiny/app-page-builder-elements";
 // The renderer React component.
 export const CountriesPageElement = createRenderer(() => {
     const { data, loading } = useLoader<string[]>(() => {
-        return fetch('https://my-api.com/countries.json')
-            .then(res => res.json())
-            .then(data => {
-                return data.map((item: Record<string, any>) => item.name);
-            });
+        // Returns a list of strings.
+        return fetch('https://my-api.com/countries.json').then(res => res.json())
     });
 
     if (loading) {
@@ -78,9 +75,9 @@ export const CountriesPageElement = createRenderer(() => {
 
     return (
         <>
-            {data.map(item => (
+            {data.map(countryName => (
                 <span
-                    key={item}
+                    key={countryName}
                     style={{
                         width: 130,
                         padding: 4,
@@ -90,7 +87,7 @@ export const CountriesPageElement = createRenderer(() => {
                         overflow: "hidden"
                     }}
                 >
-                    {item}
+                    {countryName}
                 </span>
             ))}
         </>
