--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -95,7 +95,7 @@ export const CountriesPageElement = createRenderer(() => {
 });
 ```
 
-As we can see, the `useLoader` hook is used to load the data from the `https://my-api.com/countries.json` endpoint. Within the hook, we use the [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) function to make a request to the endpoint and load the data. Once the data is loaded, we map over it and return an array of country names.
+As we can see, the `useLoader` hook is used to load the data from the `https://my-api.com/countries.json` endpoint. Within the hook, we use the [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) function to make a request to the endpoint and load the data, which is ultimately just a list of country names.
 
 Ultimately, the hook returns an object with two properties: `data` and `loading`. The `data` property contains the loaded data, while the `loading` property is a boolean that indicates whether the data is still being loaded.
 
