feat: add env utils article

--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -35,7 +35,11 @@ The `useLoader` React hook is a utility hook that helps you load data in custom 
 
 </Alert>
 
-To better illustrate the difference between loading data with and without the `useLoader` hook, we can take a look at the following videos. Both videos show a custom page element that loads a list of countries from a remote API. The first video shows the page element loading the data without the `useLoader` hook, while the second video shows the page element loading the data with the `useLoader` hook.
+### How It Works
+
+To better illustrate the difference between loading data with and without the `useLoader` hook, we can take a look at the following videos. 
+
+Both videos show a custom page element that loads a list of countries from a remote API. The first video shows the page element loading the data without the `useLoader` hook, while the second video shows the page element loading the data with the `useLoader` hook.
 
 <Gallery >
   <Image src={dataLoadedWithoutLoader} alt={<>Loading data without the <code>useLoader</code> hook</>} />
