feat: add env utils article

--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -99,11 +99,11 @@ export const CountriesPageElement = createRenderer(() => {
 });
 ```
 
-As we can see, the `useLoader` hook is used to load the data from the `https://my-api.com/countries.json` endpoint. Within the hook, we use the [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) function to make a request to the endpoint and load the data, which is ultimately just a list of country names.
+As we can see, the `useLoader` hook is used to load the data from the `https://my-api.com/countries.json` endpoint. Within the hook, we use the [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) function to make a request to the endpoint and load the data, which is just an array of strings (country names).
 
 Ultimately, the hook returns an object with two properties: `data` and `loading`. The `data` property contains the loaded data, while the `loading` property is a boolean that indicates whether the data is still being loaded.
 
-If the data is still being loaded, the **Loading...** message is displayed. If the data is not found, the **No countries found.** message is displayed. Otherwise, the list of countries is displayed.
+If the data is still being loaded, the **Loading...** message is displayed. If the data is not found, the **No countries found.** message is displayed. Otherwise, the list of country names is displayed.
 
 ## Conclusion
 
