feat: add env utils article

--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -103,7 +103,7 @@ As we can see, the `useLoader` hook is used to load the data from the `https://m
 
 Ultimately, the hook returns an object with two properties: `data` and `loading`. The `data` property contains the loaded data, while the `loading` property is a boolean that indicates whether the data is still being loaded.
 
-If the data is still being loaded, the **Loading...** message is displayed. If the data is not found, the **No countries found.** message is displayed. Otherwise, the list of country names is displayed.
+In the React component, we first check if the data is still loading. If it is, we display a **Loading...** message. If the data is not loading, we check if the data is available. If it is, we map over the array of country names and display them in a list. If the data is not available, we display a **No countries found.** message.
 
 ## Conclusion
 
