feat: add env utils article

--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -23,7 +23,7 @@ It's not uncommon to have a custom page element that loads data from an external
 
 For example, you might want to display a list of products or a list of blog posts that are loaded from [Webiny's Headless CMS GraphQL API](/docs/headless-cms/basics/graphql-api). Another examples is listing rocket and dragon spacecrafts from an external SpaceX API, which is covered in the [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) guide.
 
-In this guide, we'll show you how to efficiently load data in Page Builder elements using the `useLoader` React hook.
+In this guide, we show how to efficiently load data in Page Builder elements using the `useLoader` React hook.
 
 ## The `useLoader` React Hook
 
@@ -39,7 +39,7 @@ The `useLoader` React hook is a utility hook that helps you load data in custom 
 
 To better illustrate the difference between loading data with and without the `useLoader` hook, we can take a look at the following videos. 
 
-Both videos show a custom page element that loads a list of countries from a remote API. The first video shows the page element loading the data without the `useLoader` hook, while the second video shows the page element loading the data with the `useLoader` hook.
+Both videos show a custom page element that loads a list of countries from a remote REST API. The first video shows the page element loading the data without the `useLoader` hook, while the second video shows the page element loading the data with the `useLoader` hook.
 
 <Gallery >
   <Image src={dataLoadedWithoutLoader} alt={<>Loading data without the <code>useLoader</code> hook</>} />
