--- a/docs/release-notes/5.41.4/changelog.mdx
+++ b/docs/release-notes/5.41.4/changelog.mdx
@@ -49,9 +49,15 @@ Note that the previous way of creating Page Builder element plugins will still w
 
 <Alert type={"info"}>
 
-  Our existing [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) article has been updated to reflect these changes.
+Our existing [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) article has been
+updated to reflect these changes.
 
 </Alert>
 
-### Introducing the `useLoader` React Hook ([#4424](https://github.com/webiny/webiny-js/pull/4424)) ([#4435](https://github.com/webiny/webiny-js/pull/4435))
+### Introducing the `useLoader` React Hook ([#4424](https://github.com/webiny/webiny-js/pull/4424)) ([#4435](https://github.com/webiny/webiny-js/pull/4435)) ([#4447](https://github.com/webiny/webiny-js/pull/4447))
 
+We've introduced a brand new `useLoader` React hook, which is a essentially utility a hook that helps you load data in custom page elements.
+
+The main purpose of this hook is to ensure that, once the data is loaded in the page prerendering process, it is captured and properly cached. This way, the loaded data is immediately available when the published page is delivered to the end user, which improves page performance and user experience.
+
+For more information, please refer to the [Loading Data in Page Elements](/docs/page-builder/extending/loading-data-in-page-elements) guide.
