--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -64,13 +64,19 @@ import { createRenderer, useLoader } from "@webiny/app-page-builder-elements";
 
 // The renderer React component.
 export const CountriesPageElement = createRenderer(() => {
-    const { data, loading } = useLoader<string[]>(() => {
+    const { data, error, loading } = useLoader<string[]>(() => {
         // Returns a list of strings.
         return fetch('https://my-api.com/countries.json').then(res => res.json())
     });
 
     if (loading) {
         return <>Loading...</>;
+    }
+    
+    // Displaying an error message if the data fetching failed.
+    if (error) {
+        console.error("An error occurred while fetching data:", error);
+        return <>An error occurred: {error.message}</>;
     }
 
     if (!data) {
@@ -104,6 +110,21 @@ As we can see, the `useLoader` hook is used to load the data from the `https://m
 Ultimately, the hook returns an object with two properties: `data` and `loading`. The `data` property contains the loaded data, while the `loading` property is a boolean that indicates whether the data is still being loaded.
 
 In the React component, we first check if the data is still loading. If it is, we display a **Loading...** message. If the data is not loading, we check if the data is available. If it is, we map over the array of country names and display them in a list. If the data is not available, we display a **No countries found.** message.
+
+### Error Handling
+
+The `useLoader` hook also provides an `error` property that contains an error object if the data fetching fails. In the React component, we check if the `error` property is set and display an error message if it is.
+
+```tsx
+if (error) {
+    console.error("An error occurred while fetching data:", error);
+    return <>An error occurred: {error.message}</>;
+}
+```
+
+This way, we can handle errors that occur during the data fetching process and display an appropriate error message to the user.
+
+Note that handling errors this way can also be useful when debugging issues that occur during prerendering, which can be difficult to debug otherwise. For example, if the data fetching failed during prerendering, the error message will be displayed in the rendered HTML, which can help identify the issue.
 
 ## Conclusion
 
