--- a/docs/release-notes/5.41.4/changelog.mdx
+++ b/docs/release-notes/5.41.4/changelog.mdx
@@ -61,3 +61,34 @@ We've introduced a brand new `useLoader` React hook, which is a essentially util
 The main purpose of this hook is to ensure that, once the data is loaded in the page prerendering process, it is captured and properly cached. This way, the loaded data is immediately available when the published page is delivered to the end user, which improves page performance and user experience.
 
 For more information, please refer to the [Loading Data in Page Elements](/docs/page-builder/extending/loading-data-in-page-elements) guide.
+
+### Page Prerendering - Preloading of Fonts ([#4450](https://github.com/webiny/webiny-js/pull/4450))
+
+We've improved the page prerendering process to enhance how fonts are loaded.
+
+During prerendering, we now capture all font requests and automatically generate corresponding `<link>` HTML tags in the document's `<head>` to preload the fonts. For example:
+
+```html
+<link 
+  rel="preload" 
+  href="https://fonts.gstatic..." 
+  as="font" 
+  type="font/woff2"
+  crossorigin="anonymous">
+```
+
+Ultimately, this ensures that fonts are loaded before the page is displayed, preventing the dreaded "flash of unstyled text" (FOUT) and improving the overall user experience.
+
+<Alert title={"In Case You Missed It"}>
+
+  Pages created with the Webiny' Page Builder are prerendered when published. This means that the page is generated as a static HTML file and served to the end user. This is done to ensure the best possible performance and SEO.
+
+</Alert>
+
+## Form Builder
+
+### Form Builder - Create Settings Entry When New Locale Is Created ([#4446](https://github.com/webiny/webiny-js/pull/4446))
+
+Prior to this release, when a new locale was created, Form Builder application's settings entry was not created for the new locale. This resulted in users not being able to change the form's settings for the new locale.
+
+This issue has been fixed, and now, when a new locale is created, the Form Builder application's settings entry is also created for the new locale.
