--- a/docs/release-notes/5.41.4/changelog.mdx
+++ b/docs/release-notes/5.41.4/changelog.mdx
@@ -92,3 +92,11 @@ Ultimately, this ensures that fonts are loaded before the page is displayed, pre
 Prior to this release, when a new locale was created, Form Builder application's settings entry was not created for the new locale. This resulted in users not being able to change the form's settings for the new locale.
 
 This issue has been fixed, and now, when a new locale is created, the Form Builder application's settings entry is also created for the new locale.
+
+## Development
+
+### Webiny CLI - Improved Developer Experience ([#4455](https://github.com/webiny/webiny-js/pull/4455))
+
+We've made a couple improvements to the Webiny CLI to enhance the developer experience.
+
+For more information, please refer to the linked pull request.
