--- a/docs/developer-docs/5.41.x/headless-cms/extending/customize-entry-form-layout.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/extending/customize-entry-form-layout.mdx
@@ -27,7 +27,7 @@ Custom form layouts will also come in handy if you need to show or hide certain 
 <ExtensionsGettingStarted
   type={"admin"}
   name={"customCmsEntryFormLayout"}
-  dependencies={"@webiny/app-headless-cms,@webiny/ui"}
+  dependencies={"@webiny/app-headless-cms,@webiny/api-serverless-cms,@webiny/ui"}
   fullExampleLink={"https://github.com/webiny/webiny-examples/tree/master/custom-cms-entry-form-layout"}
   fullExampleDownloadLink={"custom-cms-entry-form-layout"}
 />
