--- a/docs/developer-docs/5.41.x/headless-cms/extending/customize-entry-form-layout.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/extending/customize-entry-form-layout.mdx
@@ -32,6 +32,12 @@ Custom form layouts will also come in handy if you need to show or hide certain 
   fullExampleDownloadLink={"custom-cms-entry-form-layout"}
 />
 
+<Alert type={"warning"}>
+
+  Note that code examples shown in this guide are working with the **Pizza** content model, whose creation is not covered in this guide. But, in the [full example](https://github.com/webiny/webiny-examples/blob/master/custom-cms-entry-form-layout/5.41.x/extensions/models/src/index.ts), the model is defined programmatically, so, you can use it to follow along.
+
+</Alert> 
+
 ## Simple Layout
 
 The following plugin renders a simple content form for the `pizza` content model.
