--- a/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
@@ -42,13 +42,26 @@ The Smart SEO extension code can be found in our [webiny-examples](https://githu
 
 ## Set OpenAI API Key in Environment Variables
 
-Open the `.env` file in the root of your project and add the OpenAI API key to the `WEBINY_ADMIN_OPEN_AI_API_KEY` environment variable as shown below:
+Open the `.env` file in the root of your project and add the OpenAI API key to the `WEBINY_API_OPEN_AI_API_KEY` environment variable as shown below:
 
 ```bash
-WEBINY_ADMIN_OPEN_AI_API_KEY=sk-proj-T2-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+WEBINY_API_OPEN_AI_API_KEY=sk-proj-T2-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ```
 
 For detailed instructions on creating an OpenAI API key, refer to their [official documentation](https://platform.openai.com/docs/quickstart#create-and-export-an-api-key).
+
+## Deploy API application
+
+In this example, we created an **Article - Smart SEO** Content Model to demonstrate AI-powered capabilities. This content model is generated [programmatically](/docs/headless-cms/extending/content-models-via-code).
+Additionally, we [extended the Headless CMS GraphQL API](/docs/headless-cms/extending/extend-graphql-api) to generate SEO data using the OpenAI API, which creates SEO titles, descriptions, and tags for articles.
+
+Details on this are covered in the sections below. For now, let’s deploy the API application that will create the Article - Smart SEO Content Model and extend Headless CMS GraphQL API to generate SEO data using OpenAI.
+
+```bash
+yarn webiny deploy api --env ENVIRONMENT_NAME
+```
+
+Alternatively, you can use the watch command, which continuously rebuild and redeploy your code. Learn more about it [here](/docs/core-development-concepts/basics/watch-command).
 
 ## Run the Project
 
@@ -87,15 +100,22 @@ We’ve also [decorated the `useBind` hook](https://github.com/webiny/webiny-exa
 ### Extract HTML from RichTextHtml (Lexical Editor)
 Webiny leverages the [Lexical text editor](https://lexical.dev/) for Rich Text Fields. However, for generating SEO-related information using OpenAI, we will send the HTML content (not the Lexical format). To achieve this, we need to extract the HTML content from the Rich Text field. For this purpose, we have created a [`extractFromRichText` transformer](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/extractFromRichText.ts) to handle the conversion.
 
-### Smart SEO
-This is the [primary plugin (`SmartSeo.tsx`)](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx  ) that integrates Webiny with OpenAI. It sends the HTML content to OpenAI and retrieves SEO-related information. The received data is then used to update the corresponding fields in the model.
+### Extend Headless CMS GraphQL API
 
-If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it has been configured in this plugin using the [ContentEntryEditorConfig](https://github.com/webiny/webiny-examples/blob/59f44c564e83e9c453819882209e8946b5069b79/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx#L117).
+In this example, we [extended the Headless CMS GraphQL API](/docs/headless-cms/extending/extend-graphql-api) to generate SEO data using the OpenAI API. The [`generateSeo` plugin](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api/src/generateSeo.ts) integrates Webiny with OpenAI. We crated a `GenerateSeo` query for the same.
+
+To prevent exposing our OpenAI API key to the public, we avoid calling the OpenAI API from the client side. Instead, we handle it server-side by creating this `generateSeo` plugin that extends the Headless CMS GraphQL API for secure SEO data generation. This plugin sends content to OpenAI and retrieves SEO-related information.
+
+### Smart SEO
+
+The [(`SmartSeo.tsx`) plugin](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx) sends HTML content to the `GenerateSeo` query (created by the `generateSeo` plugin mentioned earlier) and retrieves SEO-related information. The retrieved data is then used to update the relevant fields in the content model.
+
+If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it has been configured in this plugin using the [ContentEntryEditorConfig](https://github.com/webiny/webiny-examples/blob/0636eecf3a0e4bf7c6a0c4d96a2f35a06647f88e/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx#L108).
 
 <Alert type="info">
 
   We display the **AI-OPTIMIZED SEO** button on the Content Entry form for the content model with the ID `article`.
-  You can easily customize it to include your [content model IDs](https://github.com/webiny/webiny-examples/blob/59f44c564e83e9c453819882209e8946b5069b79/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx#L123) to display this button on the respective content model entry forms.
+  You can easily customize it to include your [content model IDs](https://github.com/webiny/webiny-examples/blob/0636eecf3a0e4bf7c6a0c4d96a2f35a06647f88e/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/admin/src/SmartSeo.tsx#L114) to display this button on the respective content model entry forms.
 
 </Alert>
 
@@ -109,7 +129,7 @@ In this example, we created an **Article - Smart SEO** Content Model with the ID
 
   Please note that the **article-smart-seo** content ID is referenced in the code. Refer to the sections above for guidance on customizing the code to align with your content model.
 
-  In your real project, you can remove this content model by either [deleting the corresponding api directory](https://github.com/webiny/webiny-examples/tree/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api) or commenting out the [Article import in the index file](https://github.com/webiny/webiny-examples/blob/59f44c564e83e9c453819882209e8946b5069b79/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api/src/index.ts#L4).
+  In your real project, you can remove this content model by either [deleting the corresponding api directory](https://github.com/webiny/webiny-examples/tree/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api) or commenting out the [Article import in the index file](https://github.com/webiny/webiny-examples/blob/0636eecf3a0e4bf7c6a0c4d96a2f35a06647f88e/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/api/src/index.ts#L6).
 
 </Alert>
 
